--- a/src/main/java/com/utfpr/projetoanalisedesistemas/LoginScreen.form
+++ b/src/main/java/com/utfpr/projetoanalisedesistemas/LoginScreen.form
@@ -116,11 +116,11 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="p_home" alignment="1" pref="588" max="32767" attributes="0"/>
+                              <Component id="p_home" alignment="1" pref="591" max="32767" attributes="0"/>
                               <Component id="p_ra" alignment="0" max="32767" attributes="0"/>
                               <Component id="p_password" alignment="0" max="32767" attributes="0"/>
-                              <Component id="p_bntlogin" alignment="1" pref="588" max="32767" attributes="0"/>
-                              <Component id="p_aviso" alignment="1" pref="588" max="32767" attributes="0"/>
+                              <Component id="p_bntlogin" alignment="1" pref="591" max="32767" attributes="0"/>
+                              <Component id="p_aviso" alignment="1" pref="591" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -159,18 +159,18 @@
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace pref="167" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                               <Component id="l_Home" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="163" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
                               <Component id="l_Home" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="71" max="32767" attributes="0"/>
+                              <EmptySpace pref="68" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -181,7 +181,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Segoe UI" size="36" style="1"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Fa&#xe7;a seu Login!"/>
+                        <Property name="text" type="java.lang.String" value="SELF-RU - Fa&#xe7;a seu Login!"/>
                       </Properties>
                     </Component>
                   </SubComponents>
