--- a/src/main/java/com/utfpr/projetoanalisedesistemas/OptionScreen.form
+++ b/src/main/java/com/utfpr/projetoanalisedesistemas/OptionScreen.form
@@ -28,7 +28,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="822" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="932" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -108,7 +108,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace pref="290" max="32767" attributes="0"/>
                           <Component id="l_logo1" min="-2" pref="263" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="261" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="371" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -175,7 +175,7 @@
                   <Color blue="f5" green="f5" red="f7" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI Black" size="24" style="0"/>
+                  <Font name="Segoe UI" size="24" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="C&#xc1;RDAPIO DA SEMANA"/>
               </Properties>
@@ -189,7 +189,7 @@
                   <Color blue="f5" green="f5" red="f7" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI Black" size="24" style="0"/>
+                  <Font name="Segoe UI" size="24" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="SAIR"/>
               </Properties>
@@ -203,7 +203,7 @@
                   <Color blue="f5" green="f5" red="f7" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI Black" size="24" style="0"/>
+                  <Font name="Segoe UI" size="24" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="COMPRAR TICKET"/>
               </Properties>
