--- a/src/main/java/com/utfpr/projetoanalisedesistemas/LoginScreen.form
+++ b/src/main/java/com/utfpr/projetoanalisedesistemas/LoginScreen.form
@@ -329,8 +329,8 @@
                   <SubComponents>
                     <Component class="javax.swing.JToggleButton" name="btn_login">
                       <Properties>
-                        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                          <Color blue="f5" green="f5" red="f7" type="rgb"/>
+                        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                          <Font name="Segoe UI" size="18" style="0"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Entrar"/>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
